--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,45 @@
-<div>
-  <h3 class="profile-name"><%= @user.name %></h3>
-  <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
-  <%= @user.introduction %>
-  <% if @user.id == current_user.id %>
-  <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
-  <% end %>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+      <h2>User info</h2>
+      <table class="table">
+        <tr><%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %></tr>
+        <tr>
+          <th>name</th>
+          <th>
+            <p class="profile-name"><%= @user.name %></p>
+          </th>
+        </tr>
+        <tr>
+          <th>introduction</th>
+          <th>
+            <%= @user.introduction %>
+          </th>
+        </tr>
+      </table>
+      <div class="row">
+        <% if @user.id == current_user.id %>
+        <p><%= link_to "", edit_user_path(@user), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %></p>
+        <% end %>
+      </div>
+      <h2>New book</h2>
+      <div>
+        <%= form_with model: @book, local:true do |f| %>
+        <p>Title</p>
+        <%= f.text_field :title %>
+        <p>Opinion</p>
+        <%= f.text_area :body %>
+        <%= f.submit '投稿', class: 'btn btn-success' %>
+        <% end %>
+      </div>
+      <%
+=begin%>
+      <div>
+        <%= render 'books/new', books: @books %>
+      </div>
+      <%
+=end%>
+    </div>
+  </div>
 </div>
 <%= render 'books/list', books: @books %>
