--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,13 +1,29 @@
 <% books.each do |book| %>
-<div>
-  <p>投稿ユーザー画像：<%= attachment_image_tag book.user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %></p>
-  <p>タイトル：
-    <%= link_to book_path(book.id) do %>
-    <%= book.title %>
+<div class="col-md-8 offset-md-1">
+  <table class="table table-hover table-inverse">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Title</th>
+        <th>Opinion</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row">
+          <%= attachment_image_tag book.user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg" %>
+        </th>
+        <td>
+          <%= link_to book_path(book.id) do %>
+          <%= book.title %>
+          <% end %>
+        </td>
+        <td>
+          <%= book.body %>
+        </td>
+      </tr>
+    </tbody>
     <% end %>
-  </p>
-  <p>感想：<%= book.body %></p>
-  <p>ユーザーネーム：<%= book.user.name %></p>
+  </table>
+  <%= paginate books %>
 </div>
-<% end %>
-<%= paginate books %>
