--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,23 @@
-<h2>プロフィール編集</h2>
-<%= form_with model:@user, local:true do |f| %>
-<label for="imputName">Name</label>
-<%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前" %>
-<%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %>
-<label for="inputImage">ProfileImage</label>
-<%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
-<%= f.text_field :introduction, autofocus: true, id: "inputIntroduction", placeholer: "" %>
-<%= f.submit "変更を保存" %>
-<% end %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+      <h2>プロフィール編集</h2>
+      <%= form_with model:@user, local:true do |f| %>
+      <div class="form-group">
+        <label for="imputName">Name</label><br />
+        <%= f.text_field :name, autofocus: true, id:"inputName, focusedInput", placeholder:"名前", class: 'form-control' %>
+      </div>
+      <div class="form-group">
+        <label for="inputImage">Image</label><br />
+        <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %><br />
+        <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
+      </div>
+      <div class="form-group">
+        <label>Introduction</label><br />
+        <%= f.text_field :introduction, autofocus: true, id: "focusedInput", placeholer: "", class: 'form-control' %>
+      </div>
+      <div class="form-group">
+        <%= f.submit "変更を保存", class: 'btn btn-secondary' %>
+      </div>
+      <% end %>
+    </div>
