--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -19,16 +19,20 @@
       </table>
       <div class="row">
         <% if @user.id == current_user.id %>
-        <p><%= link_to "", edit_user_path(@user), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %></p>
+        <%= link_to "", edit_user_path(@user), class: 'btn btn-outline-secondary btn-block fas fa-user-cog' %>
         <% end %>
       </div>
-      <h2>New book</h2>
+      <h2 class="mt-3">New book</h2>
       <div>
         <%= form_with model: @book, local:true do |f| %>
-        <p>Title</p>
-        <%= f.text_field :title %>
-        <p>Opinion</p>
-        <%= f.text_area :body %>
+        <div class="form-group">
+          <p>Title</p>
+          <%= f.text_field :title, id: 'focusedInput', class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <p>Opinion</p>
+          <%= f.text_area :body, id: 'focusedInput', class: 'form-control' %>
+        </div>
         <%= f.submit 'Create Book', class: 'btn btn-success' %>
         <% end %>
       </div>
