--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,6 +4,7 @@
   <p>ユーザーネーム：<%= @book.user.name %></p>
   <p>投稿日時：<%= @book.created_at.strftime('%Y/%m/%d') %></p>
   <% if @book .user == current_user %>
+  <%= link_to "編集", edit_book_path(@book) %>
   <%= link_to "削除", book_path(@book), method: :delete %>
   <% end %>
 </div>
