--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
     <h1>Editing Book</h1>
-    <%= form_with model: @book, local:true do |f| %>
+    <%= form_with model: @book, local: true do |f| %>
     <div class="form-group">
       <label class="book_title">Title</label>
       <%= f.text_field :title, id: 'focusedInput', class: 'form-control' %>
@@ -11,9 +11,9 @@
       <%= f.text_area :body, id: 'focusedInput', class: 'form-control' %>
     </div>
     <div class="form-group">
-        <%= f.submit "Update Book", class: 'btn btn-success' %>
+        <%= f.submit 'Update Book', class: 'btn btn-success' %>
     </div>
+    <% end %>
     <p><%= link_to "Show", book_path(@book) %> | <%= link_to "Back", books_path %></p>
   </div>
-  <% end %>
 </div>
