--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -1,5 +1,6 @@
 <div class="col-md-8 offset-md-1">
   <table class="table table-hover table-inverse">
+    <h2>Books</h2>
     <thead>
       <tr>
         <th>#</th>
