--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,1 +1,8 @@
-<%= render 'books/list', books: @books %>
+<div class="container px-5 px-sm-0">
+  <div class="row">
+    <div class="col-md-3">
+        <%= render partial: 'books/side', locals: {book:@book, user:current_user} %>
+    </div>
+        <%= render partial: 'books/list', locals: {books: @books} %>
+  </div>
+</div>
