--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,10 +21,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav ml-auto">
+            <% if user_signed_in? %>
             <li>
               <%= link_to " Home", root_path, class: 'fas fa-home nav-link text-light' %>
             </li>
-            <% if user_signed_in? %>
             <li>
               <%= link_to " Users", users_path, class: 'fas fa-users nav-link text-light' %>
             </li>
@@ -35,6 +35,9 @@
               <%= link_to " logout", destroy_user_session_path, class: 'fas fa-sign-out-alt nav-link text-light', method: :delete  %>
             </li>
             <% else %>
+            <li>
+              <%= link_to " Home", root_path, class: 'fas fa-home nav-link text-light' %>
+            </li>
             <li>
               <%= link_to " About", home_about_path, class: 'fas fa-link nav-link text-light'%>
             </li>
