--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
-      <%= render partial: 'books/side', locals:{book:@book, user:current_user} %>
+      <%= render partial: 'users/side', locals:{book: @book, user: current_user} %>
     </div>
 
     <div class="col-md-8 offset-md-1">
