--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -5,19 +5,19 @@
       <%= form_with model:@user, local:true do |f| %>
       <div class="form-group">
         <label for="imputName">Name</label><br />
-        <%= f.text_field :name, autofocus: true, id:"inputName, focusedInput", placeholder:"名前", class: 'form-control' %>
+        <%= f.text_field :name, autofocus: true, id:"inputName, focusedInput", placeholder:"name", class: 'form-control' %>
       </div>
       <div class="form-group">
         <label for="inputImage">Image</label><br />
         <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg" %><br />
-        <%= f.attachment_field :profile_image, placeholder: "プロフィール画像" %>
+        <%= f.attachment_field :profile_image, placeholder: "" %>
       </div>
       <div class="form-group">
         <label>Introduction</label><br />
         <%= f.text_field :introduction, autofocus: true, id: "focusedInput", placeholer: "", class: 'form-control' %>
       </div>
       <div class="form-group">
-        <%= f.submit "変更を保存", class: 'btn btn-secondary' %>
+        <%= f.submit "Update User", class: 'btn btn-secondary' %>
       </div>
       <% end %>
     </div>
