--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,8 @@
+<!-- 通知ここから -->
+<% if flash[:notice] %>
+<p class="flash"><%= flash[:notice] %></p>
+<% end %>
+<!-- 通知ここまで -->
 <div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
