--- a/app/views/books/_list.html.erb
+++ b/app/views/books/_list.html.erb
@@ -12,7 +12,7 @@
       <% books.each do |book| %>
       <tr>
         <th>
-          <%= attachment_image_tag book.user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg" %>
+          <%= link_to attachment_image_tag( book.user, :profile_image, :fill, 30, 30, fallback: "no_image.jpg"), book.user %>
         </th>
         <td>
           <%= link_to book_path(book.id) do %>
