--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -24,7 +24,7 @@
               <%= user.name %>
             </td>
             <td>
-              <%= link_to "show", user_path(user.id), class: "user_#{user.id}" %>
+              <%= link_to "Show", user_path(user.id), class: "user_#{user.id}" %>
             </td>
           </tr>
         </tbody>
